WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60631
WebKit2 doesn't clear the pendingAPIRequestURL on in-page anchor navigation
https://bugs.webkit.org/show_bug.cgi?id=60631
Summary
WebKit2 doesn't clear the pendingAPIRequestURL on in-page anchor navigation
John Sullivan
Reported
2011-05-11 08:59:26 PDT
WebKit2 clears the WebPageProxy's pendingAPIRequestURL when a provisional load starts, but does not clear it on an in-page anchor navigation. In-page anchor navigations never cause a provisional load to start, so the pendingAPIRequestURL is never cleared. This causes trouble for clients that test for a pendingAPIRequestURL later. In Radar as <
rdar://problem/9420520
>.
Attachments
Patch to add a call to clearPendingAPIRequestURL for in-page anchor navigations
(1.25 KB, patch)
2011-05-11 09:25 PDT
,
John Sullivan
darin
: review+
Details
Formatted Diff
Diff
Added bugzilla bug number to ChangeLog
(1.33 KB, patch)
2011-05-11 09:31 PDT
,
John Sullivan
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2011-05-11 09:25:18 PDT
Created
attachment 93130
[details]
Patch to add a call to clearPendingAPIRequestURL for in-page anchor navigations
WebKit Review Bot
Comment 2
2011-05-11 09:27:28 PDT
Attachment 93130
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2011-05-11 09:30:09 PDT
Comment on
attachment 93130
[details]
Patch to add a call to clearPendingAPIRequestURL for in-page anchor navigations Need to include the bugs.webkit.org bug number too.
Darin Adler
Comment 4
2011-05-11 09:30:21 PDT
Comment on
attachment 93130
[details]
Patch to add a call to clearPendingAPIRequestURL for in-page anchor navigations Bug URL, I mean.
John Sullivan
Comment 5
2011-05-11 09:31:43 PDT
Created
attachment 93133
[details]
Added bugzilla bug number to ChangeLog
John Sullivan
Comment 6
2011-05-11 09:46:12 PDT
Fixed in
r86240
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug