<https://bugs.webkit.org/show_bug.cgi?id=60631> <rdar://problem/9420520>

Reviewed by Darin Adler.

WebKit2 doesn't clear the pendingAPIRequestURL on in-page anchor navigation [60631]

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didSameDocumentNavigationForFrame):
Call clearPendingAPIRequestURL().



Canonical link: https://commits.webkit.org/75898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86240 268f45cc-cd09-0410-ab3c-d52691b4dbfc